--- a/docs/index.scss
+++ b/docs/index.scss
@@ -9,7 +9,6 @@ body {
     padding: 0;
     height: 100%;
     font-family: 'Open Sans', sans-serif;
-    overflow-x: hidden;
 }
 
 .anchor {
